--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,11 @@
     "version": "0.1.0",
     "description": "The chat server running https://rehi.chat",
     "repository": "https://github.com/text0rdie/rehi.chat.git",
+    "scripts": {
+        "start": "node server.js"
+    },
     "dependencies": {
+        "mysql": "^2.17.1",
         "ws": "^7.1.2"
     }
 }
