--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@sendgrid/mail": "^6.4.0",
+        "jsonwebtoken": "^8.5.1",
         "mysql": "^2.17.1",
         "ws": "^7.1.2"
     }
