More JSON Web Token support

--- a/server/config.example.json
+++ b/server/config.example.json
@@ -1,5 +1,8 @@
 {
     "debug": true,
+    "paths": {
+        "siteurl": "https://localhost"
+    },
     "db": {
         "host": "localhost",
         "user": "",
